cdm/src/main/java/ucar/nc2/jni/netcdf/NCLibrary.java


  // write array section
  int nc_put_vars(int ncid, int varid, long[] startp, long[] countp, long[] stridep, ByteBuffer bbuff);
  int nc_put_vars_uchar(int ncid, int varid, long[] startp, long[] countp, long[] stridep, byte[] ip);
  int nc_put_vars_schar(int ncid, int varid, long[] startp, long[] countp, long[] stridep, byte[] ip);
  int nc_put_vars_text(int ncid, int varid, long[] startp, long[] countp, long[] stridep, byte[] ip);
  int nc_put_vars_short(int ncid, int varid, long[] startp, long[] countp, long[] stridep, short[] ip);
  int nc_put_vars_ushort(int ncid, int varid, long[] startp, long[] countp, long[] stridep, short[] ip);
  int nc_put_vars_int(int ncid, int varid, long[] startp, long[] countp, long[] stridep, int[] ip);
  int nc_put_vars_uint(int ncid, int varid, long[] startp, long[] countp, long[] stridep, int[] ip);
  int nc_put_vars_longlong(int ncid, int varid, long[] startp, long[] countp, long[] stridep, long[] ip);
  int nc_put_vars_ulonglong(int ncid, int varid, long[] startp, long[] countp, long[] stridep, long[] ip);
  int nc_put_vars_float(int ncid, int varid, long[] startp, long[] countp, long[] stridep, float[] ip);
  int nc_put_vars_double(int ncid, int varid, long[] startp, long[] countp, long[] stridep, double[] ip);
  int nc_put_vars_string(int ncid, int varid, long[] startp, long[] countp, long[] stridep, String[] ip);

  // nc_put_att_string(int ncid, int varid, const char *name, size_t len, const char **op);

  // write attributes
  int nc_put_att (int ncid, int varid, String name, int xtype, long len, ByteBuffer value);
  int nc_put_att_string(int ncid, int varid, String attName, long len, String[] value);
  int nc_put_att_text(int ncid, int varid, String attName, long len, byte[] value);
  int nc_put_att_uchar(int ncid, int varid, String attName, int xtype, long len, byte[] value);
  int nc_put_att_schar(int ncid, int varid, String attName, int xtype, long len, byte[] value);
  int nc_put_att_short(int ncid, int varid, String attName, int xtype, long len, short[] value);
  int nc_put_att_ushort(int ncid, int varid, String attName, int xtype, long len, short[] value);
  int nc_put_att_int(int ncid, int varid, String attName, int xtype, long len, int[] value);
  int nc_put_att_uint(int ncid, int varid, String attName, int xtype, long len, int[] value);
  int nc_put_att_longlong(int ncid, int varid, String attName, int xtype, long len, long[] value);
  int nc_put_att_ulonglong(int ncid, int varid, String attName, int xtype, long len, long[] value);
  int nc_put_att_float(int ncid, int varid, String attName, int xtype, long len, float[] value);
  int nc_put_att_double(int ncid, int varid, String attName, int xtype, long len, double[] value);
}
